--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html,body{
+    height: 100%;
+    width: 100%;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -43,9 +48,7 @@
 }
 
 .background-image{
-    background-image: url("./resources/img1.jpg");
-    width: 300px;
-    height: 300px;
-
+    background: url("../resources/img1.jpg") 0% 0% / cover no-repeat fixed;
+    color:white;
 
 }
